[tool.poetry]
name = "pyspark-products"
version = "0.1.0"
description = ""
authors = ["«Selezneva <petrukhina.marina2011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
